[metadata]
name = bunnycdn-api-wrapper
version = 1.0.0
author = Hassan Aziz
author_email = hassanaziz0012@gmail.com
description = An API Wrapper for the Bunny.net API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hassanaziz0012/bunnycdn-stream-api
project_urls =
    Creator Site = https://hassanaziz0012.github.io/portfolio-website/#
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src